simplified RunTimer, works on simulated mobile so lets see about the real thing

--- a/src/css/_variables.styl
+++ b/src/css/_variables.styl
@@ -25,13 +25,13 @@ $flex-col =
 	display flex
 	flex-direction column
 	
-$blue = #7A8897
+$blue = #a5b6c9
 $pink = #AB8B82
 
 $red = #b7402c
 $red0 = #7A2B1D
 $white = #DBCDC9
-$green = #22633E
+$green = #34995f
 
 $black0 = #090F12
 $black1 = #161616
