five more unexpected hours squashing bugs

--- a/src/css/_createTimer.styl
+++ b/src/css/_createTimer.styl
@@ -40,6 +40,9 @@
 	{$input}
 	margin 5px 0 !important
 	height 4vmax !important
+	&:active,
+	&:focus
+		margin 5px 0 !important
 
 .create-timer-form-section
 	flex 0 1 95%
