--- a/src/css/_runTimer.styl
+++ b/src/css/_runTimer.styl
@@ -66,6 +66,9 @@
 	@media all and (orientation landscape)
 		height 40%
 		max-width 30%
+	@media all and (max-width 1024px)
+		height 40% !important
+		flex 0 1 70% !important
 
 .run-timer__timer-data
 	flex 0 1 80%
