--- a/src/css/_runTimer.styl
+++ b/src/css/_runTimer.styl
@@ -16,10 +16,7 @@
 		flex 0 1 80%
 		text-align center
 		align-self flex-start
-	@media all and (orientation landscape)
-		height 25%
-		
-		// margin-top 15px
+		margin-bottom 20px
 	
 .run-timer__timer-totals-ul
 	margin 0
@@ -30,7 +27,6 @@
 	align-self center
 	& > li
 		padding 2.5px
-		font-size 1.25rem
 		flex 0.25 1 20%
 		background-color $black2
 		margin 5px 0
@@ -45,12 +41,15 @@
 	color $blue
 	flex 0 1 100%
 	text-align center
+	font-size 1.35rem
+	margin-bottom 15px !important
 	// @media all and (orientation landscape)
 	// 	margin 0
 	// 	text-align center
 	
 .timer-totals__value
 	flex 0 1 100%
+	font-size 1.25rem
 	text-align center
 		
 .run-timer__button
@@ -58,17 +57,21 @@
 	flex 0 1 30%
 
 .run-timer__timer-circle
-	flex 0 1 40%
-	height 40%
-	margin 2px 0
+	// flex 0 1 35%
+	max-width 80%
+	// height 30%
 	border 5px solid $white
 	border-radius 50%
+	@media all and (orientation portrait)
+		margin 5px 0
+		height 30%
 	@media all and (orientation landscape)
 		height 40%
-		max-width 30%
-	@media all and (max-width 1024px)
-		height 40% !important
-		flex 0 1 70% !important
+	@media all and (min-width 768px)
+		height 40%
+		@media all and (orientation landscape)
+			flex 0 1 50%
+			height 50%
 
 .run-timer__timer-data
 	flex 0 1 80%
@@ -89,9 +92,11 @@
 .run-timer__timer-data-label
 	background-color $black0
 	margin-bottom 10px !important
-	padding 5px
-	font-size 1.15rem
+	padding 2vmin
+	font-size 1.25rem
 	flex 0 1 100%
 	margin 0
+	@media all and (min-width 1024px)
+		font-size 1.5rem
 	// {$flex-row-wrap}
 	// align-items center
