--- a/src/css/_runTimer.styl
+++ b/src/css/_runTimer.styl
@@ -16,7 +16,7 @@
 		flex 0 1 80%
 		text-align center
 		align-self flex-start
-		margin-bottom 20px
+		margin-bottom 1vmin
 	
 .run-timer__timer-totals-ul
 	margin 0
@@ -42,7 +42,7 @@
 	flex 0 1 100%
 	text-align center
 	font-size 1.35rem
-	margin-bottom 15px !important
+	margin-bottom 1vmin
 	// @media all and (orientation landscape)
 	// 	margin 0
 	// 	text-align center
@@ -64,9 +64,9 @@
 	border-radius 50%
 	@media all and (orientation portrait)
 		margin 5px 0
-		height 30%
+		height 35%
 	@media all and (orientation landscape)
-		height 40%
+		height 45%
 	@media all and (min-width 768px)
 		height 40%
 		@media all and (orientation landscape)
