--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1837,11 +1837,6 @@
       -ms-flex-align: center;
           align-items: center;
 }
-@media all and (orientation: portrait) {
-  .app-settings {
-    height: 90%;
-  }
-}
 .settings-div {
   width: 100%;
   -webkit-box-flex: 0;
@@ -1873,6 +1868,13 @@
   text-align: right;
   margin: 0 10px 0 0 !important;
 }
+@media all and (orientation: landscape) {
+  .settings-label {
+    -webkit-box-flex: 0.25;
+        -ms-flex: 0.25 1 25%;
+            flex: 0.25 1 25%;
+  }
+}
 .settings-input {
   height: 6vmax !important;
   border-radius: 2px !important;
@@ -1899,6 +1901,13 @@
 .settings-input::selection {
   background-color: #fff;
   color: #282828;
+}
+@media all and (orientation: landscape) {
+  .settings-input {
+    -webkit-box-flex: 0.5;
+        -ms-flex: 0.5 1 50%;
+            flex: 0.5 1 50%;
+  }
 }
 .settings-heading {
   width: 90%;
