--- a/src/css/_calendar.styl
+++ b/src/css/_calendar.styl
@@ -36,13 +36,13 @@
 .month-obj__day-box,
 .month-obj__last-day-box
 	padding 1vw
-	height (100/12)vmin
+	@media all and (orientation portrait)
+		height (100/12)vmin
 	flex 0 1 (100/6)%
 	border 1px solid $black3
 	margin 1px
 	{$flex-center-everything}
 	@media all and (orientation landscape)
-		height (100/20)vmin
 		flex 0 1 (100/8.7)%
 		margin 1px
 		
