--- a/src/css/style.css
+++ b/src/css/style.css
@@ -66,7 +66,6 @@
 .month-obj__day-box,
 .month-obj__last-day-box {
   padding: 1vw;
-  height: 8.333333333333334vmin;
   -webkit-box-flex: 0;
       -ms-flex: 0 1 16.666666666666668%;
           flex: 0 1 16.666666666666668%;
@@ -84,10 +83,15 @@
       -ms-flex-pack: center;
           justify-content: center;
 }
+@media all and (orientation: portrait) {
+  .month-obj__day-box,
+  .month-obj__last-day-box {
+    height: 8.333333333333334vmin;
+  }
+}
 @media all and (orientation: landscape) {
   .month-obj__day-box,
   .month-obj__last-day-box {
-    height: 5vmin;
     -webkit-box-flex: 0;
         -ms-flex: 0 1 11.49425287356322%;
             flex: 0 1 11.49425287356322%;
