--- a/src/css/_settings.styl
+++ b/src/css/_settings.styl
@@ -19,15 +19,15 @@
 
 .settings-label
 	font-size 1.5rem
-	flex 0.5 1 40%
+	flex 0.25 1 20%
 	text-align right
 	margin 0 10px 0 0 !important
 	@media all and (orientation landscape)
-		flex 0.25 1 25%
+		flex 0.25 1 10%
 
 .settings-input
 	{$input}
-	flex 0.25 1 25%
+	flex 0.5 1 25%
 	@media all and (orientation landscape)
 		flex 0.5 1 50%
 
@@ -39,3 +39,4 @@
 	margin 5vh 0 !important
 	& > span
 		color $pink
+		font-size 2rem
