--- a/src/css/style.css
+++ b/src/css/style.css
@@ -976,7 +976,7 @@ span {
   color: #34995f;
 }
 .logging-in {
-  height: 100%;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
